# rust-druid-toolbox

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  build.rs  package-lock.json  package.json  updater.json
.claude/: policy.md  rule.md  settings.local.json  system.md
.codegraph/: daemon.pid
.github/workflows/: quality.yml
docs/: ascii-art-plan.md
docs/i18n/: README_CN.md
docs/plans/: ascii-art-refactor.md  live-record-plan.md  refactoring-plan.md  tauri-migration-plan.md  video-frame-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-i18n-usage.cjs  check-i18n.cjs  complete-translations.ts  generate-i18n-skeleton.ts  translate-i18n.ts  update-all-locales.cjs
frontend/src/: App.tsx  globals.css  main.tsx  mantine-theme.ts
frontend/src/app/: PageContainer.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/: FileIcon.tsx  ThemeProvider.tsx
frontend/src/hooks/: useTheme.ts  (+2 more)
scripts/: check-version-consistency.cjs  publish.ps1
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy_config.rs
src-tauri/src/commands/: ascii_art.rs  live_record.rs  mod.rs  proxy.rs  rename.rs  video_frame.rs  video_tool.rs  video_utils.rs
src-tauri/src/model/: ascii_art_state.rs  error_codes.rs  file_info.rs  live_record_state.rs  mod.rs  rename_result.rs  rename_state.rs  replace_info.rs  rule_template.rs  video_frame_state.rs  video_tool_state.rs
src-tauri/src/state/: mod.rs  video_tasks.rs
src-tauri/src/utils/: ascii_art_engine.rs  common_utils.rs  file_utils.rs  font_renderer.rs  live_record_engine.rs  mod.rs  rename_logic.rs  video_frame_engine.rs  video_tool_engine.rs
src-tauri/src/utils/ascii_art_engine/: grid.rs  image_preprocess.rs  mod.rs  renderers.rs
src-tauri/src/utils/video_tool_engine/: common.rs  convert.rs  convert_video.rs  convert_video_setup.rs  cover.rs  images_to_video.rs  merge.rs  merge_reencode.rs  merge_setup.rs  mod.rs
src-tauri/src/utils/video_tool_engine/common/: codec.rs  errors.rs  ffmpeg_io.rs  format.rs  frame_scaling.rs  mod.rs  progress.rs  quality.rs
src/controller/: controllers.rs  directory_choose_controller.rs  mod.rs  mouse_controller.rs  mouse_controller_factory.rs
src/core/: mod.rs
src/enums/: material_icon.rs  mod.rs  tab_menus.rs
src/model/: app_state.rs  ascii_art_state.rs  constants.rs  file_info.rs  mod.rs  music_state.rs  rename_result.rs  rename_state.rs  replace_info.rs  rule_template.rs  video_frame_state.rs
src/rules/: directory_rules.rs  mod.rs  vector_rules.rs
src/themes/: background.rs  border.rs  mod.rs  styles.rs  text.rs
src/traits/: directory_choose.rs  impl_data.rs  mod.rs
src/ui/: app.rs  home.rs  mod.rs
src/utils/: ascii_art_engine.rs  common_utils.rs  date_utils.rs  file_utils.rs  mod.rs  picture_utils.rs  video_frame_engine.rs
src/view/: mod.rs  music_page.rs  rename_page.rs  settings_page.rs
(+156 files in other folders)
