[package]
name = "druid-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { version = "0.8.3", features = ["svg", "im", "chrono", ] }
# regex暂不支持零宽断言等高级正则，引入fancy-regex
regex = { version = "1.11.0", features = [] }
fancy-regex = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.3"
im = "15.1.0"
uuid = { version = "1.10.0", features = ["v4"] }
getset = "0.1.3"
chrono = "0.4.38"