[package]
name = "druid-toolbox"
version = "0.1.0"
authors = ["MorningZeng<zengchennihon@gmail.com>"]
edition = "2021"

[package.metadata.bundle]
identifier = "com.gayhub.morningzeng.toolbox"
icon = ["icon.ico"]
resource = ["app.rc", "icon.ico"]

[dependencies]
# GUI (Iced)
iced = { version = "0.14", features = ["tokio", "image", "svg", "advanced"] }
rfd = "0.16"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Regex
regex = "1"
fancy-regex = "0.13"

# Utils
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[build-dependencies]
embed-resource = "2.5.0"
