[package]
name = "tauri-toolbox"
version = "0.1.9"
authors = ["MorningZeng<zengchennihon@gmail.com>"]
edition = "2021"

[lib]
name = "tauri_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["video-frame"]
video-frame = ["dep:ffmpeg-next"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Regex
fancy-regex = "0.18.0"

# Image processing
image = "0.25"

# Font rendering for ASCII art PNG
ab_glyph = "0.2"

# Video processing (optional - requires FFmpeg installed)
ffmpeg-next = { version = "8", optional = true, features = ["static"] }

# Utils
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

# File system watching
notify = "7"

# HTTP client (proxy testing)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
